@@ -2,5 +2,6 @@ name    = Dancer-Session-MongoDB
 author  = Ido Perlmuter <ido@ido50.net>
 license = Perl_5
 copyright_holder = Ido Perlmuter
+copyright_year = 2014
 
 [@IDOPEREL]
