@@ -10,7 +10,10 @@ my $conn;
 eval { $conn = MongoDB::Connection->new; };
 
 SKIP: {
-	skip "MongoDB needs to be running for this test.", 4 if $@;
+	if ($@) {
+		diag("MongoDB needs to be running for this test.");
+		skip("MongoDB needs to be running for this test.", 4);
+	}
 
 	eval { Dancer::Session::MongoDB->create };
 	like $@, qr/You must define the name of the MongoDB database for session use in the app's settings/, "setting mongodb_dbname is mandatory";
