@@ -1,6 +1,8 @@
 Revision history for Dancer-Session-MongoDB
 
 {{$NEXT}}
+	- Checking if MongoDB version is v0.502.0 or higher and using
+	  MongoDB::MongoClient instead of MongoDB::Connection if so.
 
 0.3       2012-11-19 01:29:39 Asia/Jerusalem
 	- Fixed bug with the destroy method
